Brewyn | Espinal fixed form style on mobile 06-08-2024

--- a/frontend/src/components/Form/style.module.sass
+++ b/frontend/src/components/Form/style.module.sass
@@ -57,10 +57,6 @@
     font-size: 15px
     padding: 15px 20px
     transition: background-color 0.5s ease
-
-  @include mobile
-    width: 100%
-
   &__errorMessage
     color: #F44336
     font-size: 12px
