--- a/frontend/src/pages/SingOut/Register/style.module.sass
+++ b/frontend/src/pages/SingOut/Register/style.module.sass
@@ -13,5 +13,9 @@
     width: 200px
 
   @include mobile
+    & > div
+      transform: scale(0.8)
+      margin-top: -37px
+
     form
       width: 300px
